@@ -391,8 +391,6 @@ namespace sbuild
        * @param name the name of the property to format.
        * @param value the value of the property to format.  The value
        * type must support output to an ostream.
-       *
-       * @todo Replace convenience typedefs with a templated function.
        */
     public:
       format_detail(std::string const& name,
@@ -445,14 +443,13 @@ namespace sbuild
       T const&           value;
     };
 
-    /// Convenience type to format a string.
-    typedef format_detail<std::string> format_detail_string;
-    /// Convenience type to format an integer.
-    typedef format_detail<int> format_detail_int;
-    /// Convenience type to format a bool.
-    typedef format_detail<bool> format_detail_bool;
-    /// Convenience type to format a string list.
-    typedef format_detail<string_list> format_detail_strv;
+    template<typename T>
+    format_detail<T>
+    format_details(std::string const& name,
+		   T const&           value) const
+    {
+      return format_detail<T>(name, value);
+    }
 
   private:
     /// Chroot name.
